
v0.8.45 4/6/21
Some small improvements to UX (button placements etc)  

v0.8.48 4/9/21
Added CSV export button for each chart 

v0.8.50 4/10/21
Added sample rate to chart title
Store more config info with saved data & check version when restoring 
Moved software version to globalVariables.js and added compatibility check for retored data
Several small housekeeping items (fingers crossed nothing broke)

v0.8.52 4/16/2021
Speed up panning by implementing sparse plotting when Ndata >> Npixels
Added unit "n/a" for light and sound since these are not calibrated

v0.8.55 4/18/2021
Added zip compression to files used for saving & restoring acquisitions.
The files now have names like "IOLab_Apr-18-2021_19.48.59_Pendulum_29s.iozip".
Files saved with previous versions will not be readable. 

v0.8.56 4/21/2021
Added DAC output control.
Added A1/A2/A3 readout.
Fixed error when checking/unchecking empty plot  
Better rezero icon.

v0.8.58 4/22/2021
Added up/down DAC controls
Some housekeeping

v0.8.60 4/22/2021
Add controls for other outputs (D5, D6, buzzer).
Hide D5 control until option menu is available.

v0.8.62 4/23/2021
Added an options modal to select which output controls are shown 
...
Changed cookie persistence to 2 years for both calibrations and options

====================== WORK ========================================
Known Bugs:
- Sometimes plots empty if not viewed before csv export of another plot (only Mac ?)
- Sometimes restoring a data file created on another computer fails on Chromebook. 
  The same file might sometimes fail and sometimes work?
  This does not happen on Mac & Win with files created on Chromebook. 
  **These issues may be fixed in 0.8.55 but I still need to test this**

Front Burner Tasks:
- Option menu modal.

Back Burner Tasks:
- Revisit time shift
- Rationalize usage of calData vs plotData in plotting code
- display rezero icon on all zeroable plots when linked
- save/restore dataShift (?)