@@ -31,7 +31,7 @@
 <body>
   <header class="header">
     <h1>
-      <label class="iolab"> <span id="iolabWeb" title="Expect Frequent Updates"> <i><b>iOLabWeb</b> (alpha
+      <label class="iolab"> <span id="iolabWeb" title="Expect Frequent Updates"> <i><b>iOLabWeb</b> (beta
             release)</i></span> </label> &nbsp;&nbsp; |
       &nbsp;&nbsp;
       <label> Dongle: <span id="dongleStatusDisplay" title="Plug in dongle and click on connect button">not connected
@@ -207,7 +207,7 @@
       </div>
       <div class="optmodal-body">
         <table>
-          <div>Output controls to display when remote is turned on:</div>
+          <div>Output controls to display (when remote is on):</div>
           <tr>
             <td><div><input id="dispDac" type="checkbox" onclick="selectOutput()" checked>DAC (analog) &nbsp;&nbsp;</div></td>
             <td><div><input id="dispD6" type="checkbox" onclick="selectOutput()" checked>D6 (digital) &nbsp;&nbsp;</div></td>
